minor fixes with the null models

--- a/analysis/sig_sig_null_model.Rmd
+++ b/analysis/sig_sig_null_model.Rmd
@@ -148,7 +148,7 @@ get_tissue_null_quantiles = function( tissue, dataset, metric_functions_list,
     return(tissue.quantiles)
 }
 
-get_tissue_null_metrics_dist = function( tissue, dataset, metric_functions_list, 
+get_tissue_null_metrics_dist = function( tissue, dataset, 
                                       N = 1000) {
     
     tissue.set = subset_tissue(dataset, tissue = tissue) %>% 
@@ -201,30 +201,13 @@ get_tissue_null_metrics_dist = function( tissue, dataset, metric_functions_list,
 ```
 
 
-```{r, warning = FALSE}
-a = get_tissue_null_metrics_dist (tissue, PCAWG.full.subset.ann, 
-        metric_functions, N = 10)
-```
+<!-- ```{r, warning = FALSE} -->
+<!-- a = get_tissue_null_metrics_dist (tissue, PCAWG.full.subset.ann,  -->
+<!--         metric_functions, N = 10) -->
+<!-- ``` -->
 
 
 ### Metrics null model in PCAWG  
-
-```{r, warning = FALSE}
-PCAWG.tissue.null.quantiles.95 = list()
-
-PCAWG.out.dir = here("data", "RDS", "PCAWG", "signatures") 
-for (tissue in names(PCAWG.tissue.counts)) {
-    
-    cat(tissue, "\n")
-    pcawg.quants = get_tissue_null_quantiles(
-        tissue, PCAWG.full.subset.ann, 
-        metric_functions, 
-        quant = 0.95)
-    PCAWG.tissue.null.quantiles.95[[tissue]] = pcawg.quants
-        
-}
-saveRDS(PCAWG.tissue.null.quantiles.95, file = file.path(PCAWG.out.dir, "PCAWG.null.model.95.quants.RDS"))
-```
 
 
 ```{r, warning=FALSE}
@@ -236,7 +219,7 @@ for (tissue in names(PCAWG.tissue.counts)) {
     cat(tissue, "\n")
     pcawg.quants = get_tissue_null_metrics_dist(
         tissue, PCAWG.full.subset.ann, 
-        metric_functions, N = 1000)
+        N = 1000)
     PCAWG.tissue.null.metrics.dist[[tissue]] = pcawg.quants
         
 }
@@ -246,20 +229,6 @@ saveRDS(PCAWG.tissue.null.metrics.dist,
 
 
 ### Metrics null model in PCAWG  
-
-```{r, warning = FALSE}
-TCGA.tissue.null.quantiles.95 = list()
-
-TCGA.out.dir = here("data", "RDS", "TCGA", "signatures") 
-for (tissue in names(TCGA.tissue.counts) ) {
-    
-    cat(tissue, "\n")
-    tissue.quants = get_tissue_null_quantiles(tissue, TCGA.full.subset.ann, metric_functions)
-    TCGA.tissue.null.quantiles.95[[tissue]] = tissue.quants
-        
-}
-saveRDS(TCGA.tissue.null.quantiles.95, file = file.path(TCGA.out.dir, "TCGA.null.model.95.quants.RDS"))
-```
 
 
 ```{r, warning=FALSE}
@@ -271,7 +240,7 @@ for (tissue in names(TCGA.tissue.counts)) {
     cat(tissue, "\n")
     TCGA.quants = get_tissue_null_metrics_dist(
         tissue, TCGA.full.subset.ann, 
-        metric_functions, N = 1000)
+        N = 1000)
     TCGA.tissue.null.metrics.dist[[tissue]] = TCGA.quants
         
 }
